remove unused assembly references, add back when needed

--- a/Environment.props
+++ b/Environment.props
@@ -102,6 +102,8 @@
             <HintPath>$(PUBLICIZED_PATH)/assembly_utils_publicized.dll</HintPath>
             <Private>false</Private>
         </Reference>
+        <!-- TODO: Add these assemblies when they become available in publicized_assemblies folder -->
+        <!--
         <Reference Include="SoftReferenceableAssets">
             <HintPath>$(PUBLICIZED_PATH)/SoftReferenceableAssets_publicized.dll</HintPath>
             <Private>false</Private>
@@ -110,6 +112,7 @@
             <HintPath>$(PUBLICIZED_PATH)/Splatform_publicized.dll</HintPath>
             <Private>false</Private>
         </Reference>
+        -->
     </ItemGroup>
 
 </Project>
